# FEniCS23-tutorial

./: .gitignore  LICENSE  README.md  _config.yml  _toc.yml  pyproject.toml  references.bib
.github/workflows/: build-docs.yml  build_docs.yml  publish.yml
src/: approximations.py  assembly.py  benefits_of_curved_meshes.py  code_generation.py  external_mesh.py  form_compilation.py  glossary.md  introduction.c  introduction.h  introduction.py  lifting.py  mesh_generation.py  outputting.py  parallel_mesh.py  post_processing.py  problem_specification.py  ufl_formulation.c  ufl_formulation.h  ufl_formulation.py
