[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0","pip>=23.1"]

[project]
name = "FEniCS23"
version = "0.6.0"
description = "Tutorial for FENiCS 2023"
authors = [{name = "Jørgen S. Dokken", email = "dokken@simula.no"}]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = ["fenics-dolfinx==0.6.0", "pygraphviz", "pyvista", "ipythonparallel", "tqdm"]

[project.optional-dependencies]
dev = [
    "pdbpp",
    "ipython",
    "mypy",
    "flake8",
    "jupyter-book",
    "jupytext",
    "jupyterlab"
]

[tool.mypy]
ignore_missing_imports = true
# Folders to exclude
exclude = [
    "build/"
]
# Folder to check with mypy
files = [
    "src",
]
