[build-system]
requires = ["setuptools>=64.4.0", "wheel", "pip>=22.3"]

[project]
name = "FEniCS23"
version = "0.7.0"
description = "Tutorial for FENiCS 2023"
authors = [{ name = "Jørgen S. Dokken", email = "dokken@simula.no" }]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "fenics-dolfinx>=0.7.0",
    "pygraphviz",
    "pyvista[all]>=0.43.0",
    "ipyparallel",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pdbpp",
    "ipython",
    "mypy",
    "flake8",
    "jupyter-book",
    "jupytext",
    "jupyterlab",
]

[tool.mypy]
ignore_missing_imports = true
# Folders to exclude
exclude = ["build/"]
# Folder to check with mypy
files = ["src"]
