[build-system]
requires = ["setuptools>=64.4.0", "wheel", "pip>=22.3"]

[project]
name = "FEniCS_Sorbonne"
version = "0.8.0"
description = "Tutorial for FENiCS at Sorbonne University"
authors = [{ name = "Jørgen S. Dokken", email = "dokken@simula.no" }]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "fenics-dolfinx>=0.8.0",
    "pygraphviz",
    "pyvista[all]>=0.43.0",
    "ipyparallel",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pdbpp",
    "ipython",
    "mypy",
    "flake8",
    "jupyter-book",
    "jupytext",
    "jupyterlab",
]

[tool.mypy]
ignore_missing_imports = true
# Folders to exclude
exclude = ["build/"]
# Folder to check with mypy
files = ["src"]


[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle
    "W",      # pycodestyle
    "F",      # pyflakes
    "I",      # isort - use standalone isort
    "RUF",    # Ruff-specific rules
    "UP",     # pyupgrade
    "ICN",    # flake8-import-conventions
    "NPY",    # numpy-specific rules
    "FLY",    # use f-string not static joins
    "NPY201", # numpy 2.x ruleset
]
ignore = ["UP007", "RUF012"]

[tool.ruff.lint.isort]
known-third-party = [
    "gmsh",
    "numba",
    "numpy",
    "pytest",
    "pyvista",
    "pygraphviz",
]
known-first-party = ["basix", "dolfinx", "ffcx", "ufl"]
section-order = [
    "future",
    "standard-library",
    "mpi",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"mpi" = ["mpi4py", "petsc4py"]
